# moving_average_cli

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cumulative_moving_average.h  exponential_moving_average.h  moving_average.h  ohlc_data.h  simple_moving_average.h  weighted_moving_average.h
src/: cumulative_moving_average.cpp  exponential_moving_average.cpp  main.cpp  simple_moving_average.cpp  weighted_moving_average.cpp
